--- a/lib/views/layouts/main.jade
+++ b/lib/views/layouts/main.jade
@@ -1,9 +1,26 @@
 extends root
+include _lists
 
 block content
   .row
-    .col.xs-12.col-sm-9
+    section.col-xs-12.col-sm-8
+      if (contentTitle)
+        h1#content-title
+          span= contentTitle
       block main_content
 
-    .col-xs-12.col-sm-3
-      block aside_content
+    aside.col-xs-12.col-sm-4
+      block aside_content_top
+      section.tab
+        h3.tab-title= __('popular')
+        .tab-content
+          +articleListSmall(popularArticles)
+
+      section.tab
+        h3.tab-title= __('stats')
+        .tab-content
+          .row
+            .col-xs-6
+              span.st-count= stats.total
+              span=   __('articles')
+      block aside_content_bottom
