--- a/lib/assets/less/theme.less
+++ b/lib/assets/less/theme.less
@@ -23,7 +23,7 @@ body {
     line-height: 22px;
     color: #fff;
     text-decoration: none;
-    border-radius: 2px;
+    border-radius: @border-radius;
 }
 
 #page-menu {
