--- a/lib/views/layouts/main.jade
+++ b/lib/views/layouts/main.jade
@@ -16,11 +16,11 @@ block content
         .tab-content
           +articleListSmall(popularArticles)
 
-      section.tab
-        h3.tab-title= __('stats')
-        .tab-content
-          .row
-            .col-xs-6
-              span.st-count= stats.total
-              span=   __('articles')
+      //- section.tab
+      //-   h3.tab-title= __('stats')
+      //-   .tab-content
+      //-     .row
+      //-       .col-xs-6
+      //-         span.st-count= stats.total
+      //-         span=   __('articles')
       block aside_content_bottom
