--- a/lib/assets/less/article.less
+++ b/lib/assets/less/article.less
@@ -23,6 +23,10 @@ table.article-table {
     }
 }
 
+.al-t {
+    margin-top: 5px;
+}
+
 .cell-no {
     text-align: right;
 }
@@ -46,8 +50,11 @@ article {
     .ct-series-a .ct-slice-pie {
         fill: lighten(@brand-primary, 20%)
     }
-    p a{
-    	color: @brand-primary;
-    	text-decoration: underline;
+    p a {
+        color: @brand-primary;
+        text-decoration: underline;
+    }
+    h1 {
+        font-weight: bold;
     }
 }
