--- a/lib/assets/less/lists.less
+++ b/lib/assets/less/lists.less
@@ -67,3 +67,20 @@
 .small-inner {
     overflow: hidden;
 }
+
+.al-stats {
+    margin: 0px;
+    padding: 0px;
+    list-style: none;
+    font-size: 10px;
+    font-weight: bold;
+    line-height: 11px;
+    opacity: .45;
+    li {
+        display: inline-block;
+        background-image: url(/assets/img/i1.png);
+        background-repeat: no-repeat;
+        background-position: 1px 0px;
+        padding-left: 20px;
+    }
+}
