--- a/lib/assets/less/theme.less
+++ b/lib/assets/less/theme.less
@@ -50,3 +50,41 @@ body {
     padding: 15px 0px;
     font-size: 95%;
 }
+
+#content-title {
+    position: relative;
+    min-height: 42px;
+    &:before {
+        content: '';
+        display: block;
+        position: absolute;
+        left: 0px;
+        right: 30px;
+        top: 22px;
+        height: 1px;
+        background: #eee;
+    }
+    &:after {
+        content: '';
+        display: block;
+        position: absolute;
+        right: 0;
+        top: 18px;
+        width: 8px;
+        height: 8px;
+        overflow: hidden;
+        background: @brand-primary;
+        border-radius: @border-radius;
+    }
+    span {
+        background-color: #fff;
+        display: inline-block;
+        padding-right: 20px;
+        position: relative;
+    }
+}
+
+.tab-title {
+    font-weight: bold;
+    margin-bottom: 15px;
+}
