--- a/lib/views/layouts/root.jade
+++ b/lib/views/layouts/root.jade
@@ -31,14 +31,18 @@ html(lang=lang)
         #page-content.clearfix
           block content
         #page-footer.clearfix
-          a(href='https://github.com/entipic', target='_blank') Source Code on Github
+          //- a(href='https://github.com/entipic', target='_blank') Source Code on Github
 
 
     script(type='text/javascript', src=links.assets.js.main())
     if (actionUrl)
       script.
-        (function() {
-          var img = new Image();
-          img.src = '#{actionUrl}';
-        })();
+        (function(){var img = new Image();img.src = '#{actionUrl}';})();
     block scripts
+    script.
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+      ga('create', 'UA-70252851-1', 'auto');
+      ga('send', 'pageview');
