articles: memory cache

--- a/lib/views/layouts/main.jade
+++ b/lib/views/layouts/main.jade
@@ -15,6 +15,10 @@ block content
         h3.tab-title= __('popular')
         .tab-content
           +articleListSmall(popularArticles)
+      section.tab
+        h3.tab-title= __('latest_tops')
+        .tab-content
+          +articleListSmall(latestTops)
 
       //- section.tab
       //-   h3.tab-title= __('stats')
