--- a/lib/views/wide_article.jade
+++ b/lib/views/wide_article.jade
@@ -5,3 +5,6 @@ block main_content
     header
       h1= article.title
     div!=articleText.text
+
+block scripts
+  +articleJsonLd(article, articleText)
