--- a/lib/views/wide_article.jade
+++ b/lib/views/wide_article.jade
@@ -1,10 +1,13 @@
 extends layouts/wide
 
+block metas
+  +articleMetas(article, articleText)
+
 block main_content
   article
     header
       h1= article.title
     div!=articleText.text
 
-block scripts
-  +articleJsonLd(article, articleText)
+//- block scripts
+//-   +articleJsonLd(article, articleText)
