--- a/lib/assets/less/lists.less
+++ b/lib/assets/less/lists.less
@@ -76,12 +76,39 @@
     font-size: 10px;
     font-weight: bold;
     line-height: 11px;
-    opacity: .45;
+    color: @text-muted;
     li {
         display: inline-block;
-        background-image: url(/assets/img/i1.png);
-        background-repeat: no-repeat;
-        background-position: 1px 0px;
-        padding-left: 20px;
+        margin-right: 10px;
+    }
+    .al-views {
+    	position: relative;
+    	padding-left: 20px;
+        &:before {
+            background-image: url(/assets/img/i1.png);
+            background-repeat: no-repeat;
+            background-position: 1px 0px;
+            height: 15px;
+            width: 15px;
+            position: absolute;
+            left:0px;
+            top: 50%;
+            margin-top: -5px;
+            content:'';
+            opacity: .45;
+        }
+    }
+    &.stats-main {
+        font-size: 14px;
+        line-height: 16px;
+        margin: 16px 0px;
+        li {
+            &:after {
+                content: '/';
+                position: relative;
+                margin-left: 10px;
+                color: lighten(@text-muted, 20%);
+            }
+        }
     }
 }
