article_update_info

--- a/lib/views/article.jade
+++ b/lib/views/article.jade
@@ -15,6 +15,7 @@ block main_content
         li.al-views= article.countViews
     div!=articleText.text
   br
+  p.text-muted= __('article_update_info')
   br
 
 block scripts
