--- a/lib/views/layouts/root.jade
+++ b/lib/views/layouts/root.jade
@@ -12,6 +12,7 @@ html(lang=lang)
       meta(name='description', content=site.head.description)
     if (site.head.keywords)
       meta(name='keywords', content=site.head.keywords)
+    link(rel="shortcut icon", href="/favicon.ico", type="image/x-icon")
     block metas
     link(type='text/css', rel='stylesheet', href=links.assets.css.main())
     block styles
